changes for twitch dataset paths and classes

--- a/experiments/dff_rfcn/cfgs/resnet_v1_101_flownet_imagenet_vid_rfcn_end2end_ohem.yaml
+++ b/experiments/dff_rfcn/cfgs/resnet_v1_101_flownet_imagenet_vid_rfcn_end2end_ohem.yaml
@@ -1,8 +1,8 @@
 ---
 MXNET_VERSION: "mxnet"
-output_path: "./output/dff_rfcn/imagenet_vid"
+output_path: "./output/dff_rfcn/twitch_vid"
 symbol: resnet_v1_101_flownet_rfcn
-gpus: '0,1,2,3'
+gpus: '0'
 CLASS_AGNOSTIC: true
 SCALES:
 - 600
@@ -50,9 +50,9 @@ network:
   NUM_ANCHORS: 9
 dataset:
   NUM_CLASSES: 31
-  dataset: ImageNetVID
-  dataset_path: "./data/ILSVRC2015"
-  image_set: DET_train_30classes+VID_train_15frames
+  dataset: Twitch_dataset
+  dataset_path: "./data/Twitch_dataset"
+  image_set: Twitch_vid
   root_path: "./data"
   test_image_set: VID_val_videos
   proposal: rpn
