corrected name of dataset

--- a/experiments/dff_rfcn/cfgs/resnet_v1_101_flownet_imagenet_vid_rfcn_end2end_ohem.yaml
+++ b/experiments/dff_rfcn/cfgs/resnet_v1_101_flownet_imagenet_vid_rfcn_end2end_ohem.yaml
@@ -49,8 +49,8 @@ network:
   NORMALIZE_RPN: TRUE
   NUM_ANCHORS: 9
 dataset:
-  NUM_CLASSES: 31
-  dataset: Twitch_dataset
+  NUM_CLASSES: 3
+  dataset: TwitchVID
   dataset_path: "./data/Twitch_dataset"
   image_set: Twitch_vid
   root_path: "./data"
