--- a/experiments/dff_rfcn/cfgs/resnet_v1_101_flownet_imagenet_vid_rfcn_end2end_ohem.yaml
+++ b/experiments/dff_rfcn/cfgs/resnet_v1_101_flownet_imagenet_vid_rfcn_end2end_ohem.yaml
@@ -49,12 +49,12 @@ network:
   NORMALIZE_RPN: TRUE
   NUM_ANCHORS: 9
 dataset:
-  NUM_CLASSES: 3
+  NUM_CLASSES: 6
   dataset: TwitchVID
   dataset_path: "./data/Twitch_dataset"
   image_set: Twitch_vid
   root_path: "./data"
-  test_image_set: VID_val_videos
+  test_image_set: Twitch_vid_train
   proposal: rpn
 TRAIN:
   lr: 0.00025
